--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Anthony Alabado, Alabado, anthonyalabado" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anthony Alabado</title>
+    <title>Anthony Alabado | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
