--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/a.png" />
-    <meta property="og:title" content="Anthony Alabado | Portfolio" />
     <meta
       property="og:description"
       content="Welcome to my website portfolio! My website proudly displays my proficiency in React.js, Tailwind CSS, and my skill in UI/UX design. It serves as a platform to present my details and features 4 additional standout projects that exemplify my skills and creativity in action."
@@ -18,7 +17,7 @@
     <meta name="keywords" content="Anthony Alabado, Alabado, anthonyalabado" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anthony Alabado | Portfolio</title>
+    <title>Anthony Alabado | Front-End Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
